// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<h1>
  Viewing 
  1
   
  expense
   totalling
   
  $94.34
</h1>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<h1>
  Viewing 
  3
   
  expenses
   totalling
   
  $94.34
</h1>
`;
